Revision history for Neo4j::Driver

0.41  2023-11-21

 - Calling element_id() on nodes and relationships from Neo4j version 4
   and earlier issues a warning. It will not become fatal.

0.40  2023-07-19

 - Add documentation that calling element_id() on nodes and relationships
   from Neo4j version 4 and earlier might change to become a fatal error.

0.39  2023-07-06

 - The concurrent_tx option is no longer experimental (now defaults to off).
 - Fix erroneous warnings for disabled concurrent transactions on HTTP.
 - Internal change: Store driver config options in a hash of their own.

0.38  2023-06-18

 - Mitigate more test failures on slow machines and on Perl v5.14 and older.
 - Tests no longer fail for unexpected warnings, except during author testing.

0.37  2023-02-27  (TRIAL RELEASE)

 - Add deprecation warning to node and relationship id() methods on Neo4j 5
 - Fix a bug introduced in 0.36 which prevented some Bolt server/network errors
   from being reported correctly.
 - Mitigate test failures on slow machines and on Perl v5.10

0.36  2023-02-05

 - Add support for managed transaction functions.
 - Add "error" event, which makes details of server and network errors
   available to plug-ins as a Neo4j::Error object. (GH #7)

0.35  2023-01-24

 - Fix an issue which could cause a Bolt v3/v4 session to report
   "Bolt error -1" and become unusable after a server-side statement
   evaluation failure inside an explicit transaction.

0.34  2023-01-22

 - Refactor experimental plug-in API:
   - Rename PluginManager to Events, add_event_handler() to add_handler(),
     trigger_event() to trigger().
   - Specify behaviour of HTTP adapters for internal error responses generated
     by the network library.
   - Deprecate adding plug-ins by module name; use plug-in instance instead.
 - Deprecate experimental internal http_timeout setting; use config() instead.
 - Fix support for non-standard database name in explicit transaction on Bolt