@@ -128,6 +128,9 @@ L<Neo4j::Driver::Type::Node> objects in Perl describe the
 same node in the Neo4j database, you need to compare their
 element IDs.
 
+I<B<Note:> This module documentation will soon be replaced entirely
+by L<Neo4j::Driver::Types> and L<Neo4j::Types::Node>.>
+
 =head1 METHODS
 
 L<Neo4j::Driver::Type::Node> inherits all methods from
@@ -222,7 +225,7 @@ is returned instead.
 
 =over
 
-=item * L<Neo4j::Driver>
+=item * L<Neo4j::Driver::Types>
 
 =item * L<Neo4j::Types::Node>
 
