@@ -19,6 +19,9 @@ Represents a spatial point value in Neo4j.
 
 Spatial types are only supported in Neo4j version 3.4 and above.
 
+I<B<Note:> This module documentation will soon be replaced entirely
+by L<Neo4j::Driver::Types> and L<Neo4j::Types::Point>.>
+
 =head1 BUGS
 
 L<Neo4j::Driver::Type::Point> is not yet implemented.
@@ -32,7 +35,9 @@ which L<Neo4j::Bolt> depends on internally. Use HTTP instead.
 
 =over
 
-=item * L<Neo4j::Driver>
+=item * L<Neo4j::Driver::Types>
+
+=item * L<Neo4j::Types::Point>
 
 =item * Equivalent documentation for the official Neo4j drivers:
 L<Point (Java)|https://neo4j.com/docs/api/java-driver/5.2/org.neo4j.driver/org/neo4j/driver/types/Point.html>
