@@ -19,6 +19,9 @@ Represents a date, time or duration value in Neo4j.
 
 Temporal types are only supported in Neo4j version 3.4 and above.
 
+I<B<Note:> This module documentation will soon be replaced entirely
+by L<Neo4j::Driver::Types>.>
+
 =head1 BUGS
 
 L<Neo4j::Driver::Type::Temporal> is not yet implemented.
@@ -34,7 +37,11 @@ which L<Neo4j::Bolt> depends on internally. Use HTTP instead.
 
 =over
 
-=item * L<Neo4j::Driver>
+=item * L<Neo4j::Driver::Types>
+
+=item * L<Neo4j::Types::DateTime>
+
+=item * L<Neo4j::Types::Duration>
 
 =item * L<"Temporal values" in Neo4j Cypher Manual|https://neo4j.com/docs/cypher-manual/5/syntax/temporal/>
 
