@@ -4,6 +4,7 @@ Revision history for Neo4j::Driver
 
  - Calling element_id() on nodes and relationships from Neo4j version 4
    and earlier issues a warning. It will not become fatal.
+ - New Neo4j::Driver::Types doc as an initial step towards Neo4j::Types v2.
 
 0.40  2023-07-19
 
